--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@
   <meta name="msapplication-tap-highlight" content="no"/>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
